transition a box in and out of a list

--- a/src/App.css
+++ b/src/App.css
@@ -2,32 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.box {
+  margin: 10px;
+  width: 50px;
+  height: 50px;
+  background-color: blue;
   color: white;
+  font-size: 3rem;
+  border: 2px solid black;
 }
 
-.App-link {
-  color: #61dafb;
+.t-box-enter {
+  opacity: 0;
+  transform: scale(0);
+}
+.t-box-enter-active {
+  opacity: 1;
+  transform: scale(1);
+  transition: opacity 400ms, transform 400ms;
+}
+.t-box-enter-done .card {
+  border-color: green;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.t-box-exit {
+  opacity: 1;
+  transform: scale(1);
+}
+.t-box-exit-active {
+  opacity: 0;
+  transform: scale(0);
+  transition: opacity 400ms, transform 400ms;
 }
