--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,9 @@
-.App {
-  text-align: center;
+* {
+  box-sizing: border-box;
 }
 
-.box {
-  margin: 10px;
-  width: 50px;
-  height: 50px;
-  background-color: blue;
-  color: white;
-  font-size: 3rem;
-  border: 2px solid black;
+.App {
+  text-align: center;
 }
 
 .t-box-enter {
@@ -33,4 +27,35 @@
   opacity: 0;
   transform: scale(0);
   transition: opacity 400ms, transform 400ms;
+}
+
+.columns {
+  display: flex;
+  justify-content: center;
+}
+
+.box-grid {
+  margin-right: 35px;
+  flex: 1 1 130px;
+  max-width: 130px;
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+}
+
+.box {
+  width: 100%;
+  height: 100%;
+  background-color: blue;
+  color: white;
+  font-size: 3rem;
+  border: 2px solid black;
+}
+
+.box:after {
+  content: '';
+  float: left;
+  display: block;
+  padding-top: 100%;
 }
